--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
+        margin-top: 50px;
       }
 
       /* Style the <hr> element */
