--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   <body>
     <div class="bgimg">
       <div class="middle">
-        <img src='./roloff-farms-logo.webp' />
+        <img src='./roloff-farms-itrip-logo.png' />
         <h1>Coming Soon!</h1>
         <hr>
         <p>Interested in possibly staying at the beautiful 5 bedroom house on Roloff Farms?</p>
         <p>Get on our VIP list and be one of the first to know when it goes live!</p>
-        <p>Send us an email at stayatrolofffarms@itrip.net</p>
+        <p>Send us an email at <b style="font-size: 24px;">stayatrolofffarms@itrip.net</b></p>
         <p>And we will let you know as soon</p>
         <p>As it is live!!</p>
         <img src='./roloff-farms-house.png' width= '100%' />
