--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <img src='./roloff-farms-itrip-logo.png' />
         <h1>Coming Soon!</h1>
         <hr>
-        <p>Interested in possibly staying at the beautiful 5 bedroom house on Roloff Farms?</p>
+        <p>Interested in staying at the beautiful 5 bedroom house on Roloff Farms?</p>
         <p>Get on our VIP list and be one of the first to know when it goes live!</p>
-        <p>Send us an email at <b style="font-size: 24px;">stayatrolofffarms@itrip.net</b></p>
-        <p>And we will let you know as soon</p>
-        <p>As it is live!!</p>
+        <p><b>Email</b> us at <b style="font-size: 24px;">stayatrolofffarms@itrip.net</b></p>
+        <p>We will let you know when you can</p>
+        <p><b><u>book your reservations!</u></b></p>
         <img src='./roloff-farms-house.png' width= '100%' />
       </div>
     </div>
